--- a/.github/workflows/docker-publish-wroker.yml
+++ b/.github/workflows/docker-publish-wroker.yml
@@ -23,6 +23,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: worker
-          file: ./Dockerfile
+          file: ./DOCKERFILE
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/worker_skullnbones_market:latest
