--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "worker",
+  "name": "api_v2",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
+  "main": "build/src/server.js.js",
   "scripts": {
-    "build": "tsc",
-    "run": "node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "ts-node src/index.ts"
+    "build-swagger": "tsoa spec",
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
+    "build": "tsoa spec-and-routes && tsc",
+    "start": "node build/src/server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "swagger-ui-express": "^4.5.0",
+    "tsoa": "^4.1.2"
+  },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
-    "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "concurrently": "^7.4.0",
     "nodemon": "^2.0.19",
-    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "log-timestamp": "^0.3.0",
-    "mongodb": "^4.9.1",
-    "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0",
-    "tsoa": "^4.1.2"
   }
 }
