--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "api_v2",
+  "name": "skullnbonesapiv2",
   "version": "1.0.0",
+  "description": "Skull&Bones API V2 (UDF-Compatible)",
   "main": "build/src/server.js.js",
   "scripts": {
     "build-swagger": "tsoa spec",
@@ -10,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "swagger-ui-express": "^4.5.0",
