--- a/worker/package.json
+++ b/worker/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.61.0",
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.2",
+    "fetch-retry": "^5.0.3",
+    "fetch-retry-ts": "^1.1.25",
     "log-timestamp": "^0.3.0",
     "mongodb": "^4.9.1"
   }
