added tests for mapping of data

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@
 /api_v2/node_modules
 /snapshot/
 /worker/package-lock.json
-/worker/yarn.lock
+/worker/yarn.lock!/worker/in.json
+/worker/out.json
+/worker/in.json
