--- a/worker/package.json
+++ b/worker/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "build": "tsc",
     "run": "node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "ts-node src/index.ts"
+    "watch": "ts-node src/index.ts",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cli-progress": "3.11.0",
+    "@types/jest": "^29.0.2",
     "cli-progress": "3.11.0",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
