--- a/worker/package.json
+++ b/worker/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.61.0",
+    "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.2",
     "fetch-retry": "^5.0.3",
