--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -106,7 +106,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true
+    "skipLibCheck": true,
     /* Skip type checking all .d.ts files. */
+    "filesGlob": [
+      "../../lib/**/*.ts"
+    ]
   }
 }
