--- a/worker/package.json
+++ b/worker/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "apilib": "file:../apilibrary",
     "@solana/web3.js": "^1.61.0",
     "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
