--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "swagger-ui-express": "^4.5.0",
-    "tsoa": "^4.1.2"
+    "tsoa": "^4.1.2",
+    "apilib": "file:../apilibrary"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
