--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -2,21 +2,23 @@
   "name": "skullnbonesapiv2",
   "version": "1.0.0",
   "description": "Skull&Bones API V2 (UDF-Compatible)",
-  "main": "build/src/server.js.js",
+  "main": "src/server.js",
   "scripts": {
     "build-swagger": "tsoa spec",
     "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
     "build": "tsoa spec-and-routes && tsc",
-    "start": "node build/src/server.js"
+    "start": "node build/app.js"
   },
   "license": "MIT",
   "dependencies": {
+    "apilib": "file:../apilibrary",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongodb": "^4.9.1",
     "swagger-ui-express": "^4.5.0",
-    "tsoa": "^4.1.2",
-    "apilib": "file:../apilibrary"
+    "tsoa": "^4.1.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
