--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -2,27 +2,30 @@
   "name": "skullnbonesapiv2",
   "version": "1.0.0",
   "description": "Skull&Bones API V2 (UDF-Compatible)",
-  "main": "src/server.js",
+  "main": "src/app.js",
   "scripts": {
+    "clean": "rm -rf build/",
     "build-swagger": "tsoa spec",
+    "build-routes": "tsoa routes",
     "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
     "build": "tsoa spec-and-routes && tsc",
-    "start": "node build/app.js"
+    "start": "node build/server.js"
   },
   "license": "MIT",
   "dependencies": {
-    "apilib": "file:../apilibrary",
+    "apilibrary": "file:../apilibrary",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
     "swagger-ui-express": "^4.5.0",
-    "tsoa": "^4.1.2"
+    "tsoa": "^4.1.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/multer": "1.4.7",
     "@types/node": "^18.7.16",
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.4.0",
