--- a/apilibrary/package.json
+++ b/apilibrary/package.json
@@ -7,7 +7,6 @@
     "build": "npx tsc"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "node-fetch": "^3.2.10"
+    "axios": "^0.27.2"
   }
 }
