--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
     "swagger-ui-express": "^4.5.0",
-    "tsoa": "^4.1.1"
+    "tsoa": "^4.1.1",
+    "@types/multer": "1.4.7"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
