--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -17,7 +17,7 @@ COPY ./api_v2 ./api_v2
 COPY ./apilibrary ./apilibrary
 
 RUN cd apilibrary && tsc
-RUN cd api_v2 && NODE_ENV=$NODE_ENV tsc
+RUN cd api_v2 && tsoa spec-and-routes && NODE_ENV=$NODE_ENV tsc
 
 
 CMD ["node", "./api_v2/build/server.js"]
