--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -13,15 +13,19 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "1.4.7",
     "apilibrary": "file:../apilibrary",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
+    "mongodb-redis-cache": "^1.0.6",
+    "mongoose": "^6.6.1",
+    "redis": "^4.3.1",
     "swagger-ui-express": "^4.5.0",
-    "tsoa": "^4.1.1",
-    "@types/multer": "1.4.7"
+    "tsoa": "^4.1.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
