--- a/api_v2/package.json
+++ b/api_v2/package.json
@@ -13,6 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@redis/json": "^1.0.4",
     "@types/multer": "1.4.7",
     "apilibrary": "file:../apilibrary",
     "axios": "^0.27.2",
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-redis-cache": "^1.1.3",
     "mongodb": "^4.9.1",
     "mongodb-redis-cache": "^1.0.6",
     "mongoose": "^6.6.1",
